@@ -1,16 +1,34 @@
 setMethod("crossprod", signature(x = "CsparseMatrix", y = "missing"),
-	  function(x, y = NULL)
-	  .Call("Csparse_crossprod", x, trans = FALSE, triplet = FALSE,
-		PACKAGE = "Matrix"))
+	  function(x, y = NULL) {
+              a <- .Call("Csparse_crossprod", x, trans = FALSE, triplet = FALSE,
+                         PACKAGE = "Matrix")
+              switch(substr(class(a)[1], 1, 1),
+                     "d" = new("dsCMatrix", i = a@i, p = a@p, x = a@x,
+                     Dim = a@Dim, Dimnames = a@Dimnames, uplo = "U",
+                     factors = list()),
+                     "l" = new("lsCMatrix", i = a@i, p = a@p,
+                     Dim = a@Dim, Dimnames = a@Dimnames, uplo = "U",
+                     factors = list()))
+          })
+
 
 setMethod("t", signature(x = "CsparseMatrix"),
 	  function(x)
 	  .Call("Csparse_transpose", x, PACKAGE = "Matrix"))
 
 setMethod("tcrossprod", signature(x = "CsparseMatrix", y = "missing"),
-	  function(x, y = NULL)
-	  .Call("Csparse_crossprod", x, trans = TRUE, triplet = FALSE,
-		PACKAGE = "Matrix"))
+	  function(x, y = NULL) {
+              a <- .Call("Csparse_crossprod", x, trans = TRUE, triplet = FALSE,
+                         PACKAGE = "Matrix")
+              switch(substr(class(a)[1], 1, 1),
+                     "d" = new("dsCMatrix", i = a@i, p = a@p, x = a@x,
+                     Dim = a@Dim, Dimnames = a@Dimnames, uplo = "L",
+                     factors = list()),
+                     "l" = new("lsCMatrix", i = a@i, p = a@p,
+                     Dim = a@Dim, Dimnames = a@Dimnames, uplo = "L",
+                     factors = list()))
+          })
+
 ## FIXME (TODO):
 ## setMethod("tcrossprod", signature(x = "CsparseMatrix", y = "CsparseMatrix"),
 ## 	  function(x, y)
